On saving the wallet, open the file unbuffered and check every single write operation for success. This seems to be the sanest way to avoid wallet corruption in extreme conditions (eg. full disk).

BUG:181059

svn path=/trunk/KDE/kdebase/runtime/; revision=912695